v0.0.11	Tue  6 Jan 21:07:47 GMT 2026
	* Rename module files
v0.0.10	Sun  7 Aug 09:48:16 BST 2022
	* Upload to zef repository
v0.0.9		Sat  6 Feb 14:30:01 GMT 2021
	* Liberate Lumberjack::Message::JSON
v0.0.8		Wed 18 Mar 10:42:09 GMT 2020
	* Switch CI build to use docker
	* Light Perl 6 → Raku renaming
v0.0.7		Wed 30 Jan 21:16:32 GMT 2019
	* Spring clean and upload to CPAN
v0.0.6		Tue Jun 13 21:30:00 2017 +0100 
	* Update to work with P6W
v0.0.5		Sat Apr 29 12:42:57 2017 +0100 
	* Fix for incompatible change in %?RESOURCES
v0.0.4		Fri Nov 4 21:06:54 2016 +0000 
	* Handle a Failure better Send charset with content type
v0.0.3		Mon Jul 4 11:55:30 2016 +0100 
	* Version bump
v0.0.2		Sun May 29 08:46:00 2016 +0100 
	* Remove version from use Lumberjack
v0.0.1		Tue Apr 12 00:36:39 2016 +0100 
	* INitial release
