@@ -1,5 +1,6 @@
 v0.0.11	Tue  6 Jan 21:07:47 GMT 2026
 	* Rename module files
+	* Explicit Template6 version
 v0.0.10	Sun  7 Aug 09:48:16 BST 2022
 	* Upload to zef repository
 v0.0.9		Sat  6 Feb 14:30:01 GMT 2021
